[#12] 앱 첫 시작시 신규/기존 사용자에 따라 화면전환

--- a/MOGAKCO/MOGAKCO/Support/Info.plist
+++ b/MOGAKCO/MOGAKCO/Support/Info.plist
@@ -9,7 +9,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.484901571856-t3miglhtgu5nedvq3crnfgahui6sgn69</string>
+				<string>com.googleusercontent.apps.355153590205-t8u7u644sesms399b5iunjeskdccbt08</string>
 			</array>
 		</dict>
 	</array>
@@ -18,7 +18,7 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<false/>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>api.sesac.co.kr:1207</key>
