--- a/MOGAKCO/MOGAKCO/Support/Info.plist
+++ b/MOGAKCO/MOGAKCO/Support/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>주변에 새싹이들이 있는지 찾기 위해 사용자의 현재 위치가 필요합니다.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>주변에 새싹이들이 있는지 찾기 위해 사용자의 현재 위치가 필요합니다.</string>
 	<key>NMFClientId</key>
 	<string>7i9fc15iv4</string>
 	<key>FirebaseAppDelegateProxyEnabled</key>
